--- a/Components/Pages/CalculateDistance.razor
+++ b/Components/Pages/CalculateDistance.razor
@@ -7,37 +7,26 @@
 <div class="container h-full my-10 mx-auto flex flex-col justify-center gap-3">
     <h3 class="text-3xl">Route Distance Calculator</h3>
 
+    <p class="text-gray-600">
+        Calculate the total distance of any given train route across Kiwiland’s interconnected towns.
+    </p>
+    
+    <p class="text-gray-600">
+    Enter the stops in the route and click the button to calculate the distance.
+    </p>
 
-    <div class="flex flex-col md:flex-row gap-2 flex-wrap">
+    <div class="flex flex-col gap-2 flex-wrap">
 
-        @foreach (var (key, value) in Stops)
-        {
-            <div class="p-2 rounded bg-white cursor-text flex flex-row relative"
-                 x-data="{value: '@value', showRemove: false}"
-                 x-on:mouseover="showRemove = true"
-                 x-on:mouseout="showRemove = false"
-                 x-on:click="() => $refs.input.select()">
+        <div class="p-2 w-min rounded bg-white cursor-text flex flex-row relative"
+             x-data="{value: '@Stops'}" x-on:click="() => $refs.input.select()">
 
-                <input class="focus:outline-none p-0 m-0 bg-transparent border-none"
-                       @oninput="(e) => SetStopValue(e, key)"
-                       x-ref="input"
-                       x-model="value"
-                       x-on:input="value = $event.target.value.toUpperCase()"
-                       maxlength="1"/>
-
-                <span x-cloak x-show="showRemove" @onclick="() => RemoveStop(key)" class="cursor-pointer absolute right-0 top-0 p-2">
-                    X
-                </span>
-            </div>
-        }
-
-        <button class="h-full text-2xl align-middle"
-                x-tooltip="Add a stop"
-                type="button"
-                @onclick='() => AddStop()'>
-            +
-        </button>
-
+            <input class="focus:outline-none p-0 m-0 bg-transparent border-none"
+                   @bind="Stops"
+                   x-ref="input"
+                   x-model="value"
+                   x-on:input="value = $event.target.value.toUpperCase()"
+           />
+        </div>
 
     </div>
 
@@ -48,7 +37,7 @@
     @if (Result.Length > 0)
     {
         <div class="text-white bg-secondary rounded p-3 mt-3">
-            The distance of the route @Stops.Values.Select(x => x).Aggregate((x, y) => $"{x}-{y}"):
+            The distance of the route @Stops:
             <div class="text-3xl">
                 @Result
             </div>
@@ -67,20 +56,14 @@
     private string Result = "";
     private string Error = "";
 
-    public Dictionary<int, string> Stops = new Dictionary<int, string>();
+    public string Stops = "";
     public Railway Railway = new Railway();
 
-    protected override void OnInitialized()
-    {
-        // Add some
-        AddStop();
-        AddStop();
-    }
-
+    // arg should be the JS click event
     private void Run()
     {
         Reset();
-        
+
         int res;
 
         try
@@ -100,28 +83,10 @@
         }
     }
 
-    private void AddStop(string stop = "")
-    {
-        Stops.Add(Stops.Count, stop);
-        Reset();
-    }
-
-    private void RemoveStop(int key)
-    {
-        Stops.Remove(key);
-        Reset();
-    }
-
     private void Reset()
     {
         Result = "";
         Error = "";
-    }
-
-    private void SetStopValue(ChangeEventArgs e, int key)
-    {
-        Stops[key] = e.Value.ToString();
-        Reset();
     }
 
 }
