--- a/Components/Pages/CalculateDistance.razor
+++ b/Components/Pages/CalculateDistance.razor
@@ -4,28 +4,28 @@
 
 <PageTitle>Route Distance Calculator</PageTitle>
 
-<div class="container h-full my-10 mx-auto flex flex-col justify-center gap-3">
-    <h3 class="text-3xl">Route Distance Calculator</h3>
+<h3 class="text-3xl">Route Distance Calculator</h3>
 
-    <p class="text-gray-600">
-        Calculate the total distance of any given train route across Kiwiland’s interconnected towns.
-    </p>
-    
-    <p class="text-gray-600">
+<p class="text-gray-600">
+    Calculate the total distance of any given train route across Kiwiland’s interconnected towns.
+</p>
+<p class="text-gray-600">
     Enter the stops in the route and click the button to calculate the distance.
-    </p>
+</p>
+
+
+<div class="container h-full my-10 mx-auto flex flex-col justify-center gap-3">
 
     <div class="flex flex-col gap-2 flex-wrap">
 
-        <div class="p-2 w-min rounded bg-white cursor-text flex flex-row relative"
+        <div class="p-2 w-full md:w-min rounded bg-white cursor-text flex flex-row relative"
              x-data="{value: '@Stops'}" x-on:click="() => $refs.input.select()">
 
             <input class="focus:outline-none p-0 m-0 bg-transparent border-none"
                    @bind="Stops"
                    x-ref="input"
                    x-model="value"
-                   x-on:input="value = $event.target.value.toUpperCase()"
-           />
+                   x-on:input="value = $event.target.value.toUpperCase()"/>
         </div>
 
     </div>
@@ -70,7 +70,7 @@
         {
             res = new Route(Stops, Railway).Distance;
 
-            if (res < 0)
+            if (res <= 0)
             {
                 throw new Exception("NO SUCH ROUTE");
             }
