--- a/Components/Layout/Layout.razor
+++ b/Components/Layout/Layout.razor
@@ -14,7 +14,7 @@
 
 
     <main class="w-full h-full flex-grow bg-gradient-to-bl from-gray-400 to-gray-200">
-        <div class="container mx-auto my-10">
+        <div class="container mx-auto my-10 px-5 ">
             @Body
         </div>
     </main>
