--- a/Components/Pages/CalculateShortestRoute.razor
+++ b/Components/Pages/CalculateShortestRoute.razor
@@ -1,12 +1,20 @@
 @page "/shortest-route"
 @rendermode InteractiveServer
 
-<div class="text-2xl font-bold">Shortest Route Calculator</div>
+<h3 class="text-3xl">Shortest Route Calculator</h3>
 
-<div class="my-10">
+<p class="text-gray-600">
+    Instantly determine the shortest route between any two towns, saving time and optimizing travel efficiency.
+</p>
+
+<p class="text-gray-600">
+    Enter the start and end towns, and click the button to calculate the shortest route.
+</p>
+
+<div class="my-10 flex flex-col gap-3">
     <label class="inline-block">
         <div>Start</div>
-        <input type="text" @bind="Start" class="p-2 rounded focus:outline-0"
+        <input type="text" @bind="Start" class="p-2 rounded focus:outline-0 w-full md:w-auto"
                x-data="{value: '@Start'}"
                x-model="value"
                x-on:input="value = $event.target.value.toUpperCase()"
@@ -16,7 +24,7 @@
 
     <label class="inline-block">
         <div>End</div>
-        <input type="text" @bind="End" class="p-2 rounded focus:outline-0"
+        <input type="text" @bind="End" class="p-2 rounded focus:outline-0 w-full md:w-auto"
                x-data="{value: '@End'}"
                x-model="value"
                x-on:input="value = $event.target.value.toUpperCase()"
@@ -24,7 +32,7 @@
                x-on:click="() => $event.target.select()"/>
     </label>
 
-    <button class="bg-secondary text-white p-2 px-5 rounded" @onclick="Run">
+    <button class="bg-secondary text-white p-2 px-5 rounded mt-4 w-auto md:w-fit" @onclick="Run">
         Calculate Shortest Route
     </button>
 
@@ -74,7 +82,7 @@
         }
         catch (Exception e)
         {
-            Error = $"Could Not Find Shortest Route between {Start} and {End}"; 
+            Error = $"Could Not Find Shortest Route between {Start} and {End}";
         }
     }
 
