--- a/Components/Pages/CalculateUniqueRoutesCount.razor
+++ b/Components/Pages/CalculateUniqueRoutesCount.razor
@@ -2,18 +2,26 @@
 @using System.Text.RegularExpressions
 @rendermode InteractiveServer
 
-<div class=" text-2xl font-bold">Route Counter</div>
+<h3 class="text-3xl">Route Counter</h3>
+
+<p class="text-gray-600">
+    Discover the number of unique routes between two towns, with customizable stop limits to meet your travel or logistical needs.
+</p>
+
+<p class="text-gray-600">
+    Enter the start and end towns, set the filters, and click the button to calculate the number of unique routes.
+</p>
 
 <div class="text-2xl mt-10">Filters</div>
 <div class="text-xs text-gray-600 mb-2">Filters set to 0 are ignored.</div>
 
 
-<div class="flex gap-3">
+<div class="flex flex-col md:flex-row gap-3">
     <div class="bg-gray-300 p-5 rounded-xl">
         <div class="text-xl underline">Stops</div>
         <div class="">
             <label class="inline-block">
-                <input type="number" @bind="Stops" class="p-2 rounded focus:outline-0"
+                <input type="number" @bind="Stops" class="p-2 rounded focus:outline-0 w-auto"
                        x-data x-on:click="() => $event.target.select()"/>
             </label>
 
@@ -30,6 +38,9 @@
 
     <div class="bg-gray-300 p-5 rounded-xl">
         <div class="text-xl underline">Distance</div>
+        <div class="text-xs text-gray-600">
+            Click on the operator to change it
+        </div>
         <div>
             <span>
                 Total Distance
@@ -39,15 +50,12 @@
                         x-text="'@(DistanceOperator)'"
                         class="p-2 rounded text-white bg-primary">
                 </button>
-                <div class="text-xs absolute pt-1 text-gray-600">
-                    Click on the operator to change it
-                </div>
             </label>
 
             <label class="inline-block">
                 <input type="number"
                        @bind="Distance"
-                       class="p-2 rounded focus:outline-0"
+                       class="p-2 rounded w-20 focus:outline-0"
                        x-data x-on:click="() => $event.target.select()"/>
             </label>
 
@@ -56,9 +64,9 @@
 </div>
 
 <div class="my-10">
-    <label class="inline-block">
+    <label class="inline-block w-full my-2">
         <div>Start</div>
-        <input type="text" @bind="Start" class="p-2 rounded focus:outline-0"
+        <input type="text" @bind="Start" class="p-2 rounded focus:outline-0 w-full md:w-min"
                x-data="{value: '@Start'}"
                x-model="value"
                x-on:input="value = $event.target.value.toUpperCase()"
@@ -66,9 +74,9 @@
                x-on:click="() => $event.target.select()"/>
     </label>
 
-    <label class="inline-block">
+    <label class="inline-block w-full my-2">
         <div>End</div>
-        <input type="text" @bind="End" class="p-2 rounded focus:outline-0"
+        <input type="text" @bind="End" class="p-2 rounded focus:outline-0 w-full md:w-min"
                x-data="{value: '@End'}"
                x-model="value"
                x-on:input="value = $event.target.value.toUpperCase()"
@@ -76,7 +84,7 @@
                x-on:click="() => $event.target.select()"/>
     </label>
 
-    <button class="bg-secondary text-white p-2 px-5 rounded" @onclick="Run">
+    <button class="bg-secondary text-white p-2 px-5 my-2 rounded w-full md:w-auto" @onclick="Run">
         Count Unique Routes
     </button>
 
@@ -202,7 +210,7 @@
     public void StateHasChanged()
     {
         base.StateHasChanged();
-        
+
         showRoutes = false;
         Results = new List<Route>();
         Error = "";
