--- a/Components/Pages/CalculateDistance.razor
+++ b/Components/Pages/CalculateDistance.razor
@@ -1,6 +1,7 @@
 ﻿@page "/distance-calculator"
 @using System.Collections
 @rendermode InteractiveServer
+@inject Railway Railway
 
 <PageTitle>Route Distance Calculator</PageTitle>
 
@@ -18,15 +19,19 @@
 
     <div class="flex flex-col gap-2 flex-wrap">
 
-        <div class="p-2 w-full md:w-min rounded bg-white cursor-text flex flex-row relative"
-             x-data="{value: '@Stops'}" x-on:click="() => $refs.input.select()">
+        <label>
+            Route
+            <div class="p-2 w-full md:w-min rounded bg-white cursor-text flex flex-row relative"
+                 x-data="{value: '@Path'}" x-on:click="() => $refs.input.select()">
 
-            <input class="focus:outline-none p-0 m-0 bg-transparent border-none"
-                   @bind="Stops"
-                   x-ref="input"
-                   x-model="value"
-                   x-on:input="value = $event.target.value.toUpperCase()"/>
-        </div>
+                <input class="focus:outline-none p-0 m-0 bg-transparent border-none"
+                       placeholder="e.g. ABC"
+                       @bind="Path"
+                       x-ref="input"
+                       x-model="value"
+                       x-on:input="value = $event.target.value.toUpperCase()"/>
+            </div>
+        </label>
 
     </div>
 
@@ -37,7 +42,7 @@
     @if (Result.Length > 0)
     {
         <div class="text-white bg-secondary rounded p-3 mt-3">
-            The distance of the route @Stops:
+            The distance of the route @Path:
             <div class="text-3xl">
                 @Result
             </div>
@@ -55,11 +60,13 @@
 @code {
     private string Result = "";
     private string Error = "";
+    private string Path = "ABC";
 
-    public string Stops = "";
-    public Railway Railway = new Railway();
+    protected override void OnInitialized()
+    {
+        Railway.EnsureRoutesLoaded();
+    }
 
-    // arg should be the JS click event
     private void Run()
     {
         Reset();
@@ -68,7 +75,7 @@
 
         try
         {
-            res = new Route(Stops, Railway).Distance;
+            res = new Route(Path, Railway).Distance;
 
             if (res <= 0)
             {
