--- a/Components/Pages/CalculateUniqueRoutesCount.razor
+++ b/Components/Pages/CalculateUniqueRoutesCount.razor
@@ -1,5 +1,7 @@
 @page "/unique-routes"
 @using System.Text.RegularExpressions
+@using Trains.Data
+@inject Railway Railway
 @rendermode InteractiveServer
 
 <h3 class="text-3xl">Route Counter</h3>
@@ -84,7 +86,7 @@
                x-on:click="() => $event.target.select()"/>
     </label>
 
-    <button class="bg-secondary text-white p-2 px-5 my-2 rounded w-full md:w-auto" @onclick="Run">
+    <button class="bg-secondary text-white p-2 px-5 my-2 rounded w-full" @onclick="Run">
         Count Unique Routes
     </button>
 
@@ -145,7 +147,6 @@
     string Start = "";
     string End = "";
 
-    Railway _railway = new Railway();
     public int Stops { get; set; }
     public int Distance { get; set; }
     public bool Exact { get; set; }
@@ -156,6 +157,11 @@
         { "<", "less than" },
         { "=", "equal to" }
     };
+
+    protected override void OnInitialized()
+    {
+        Railway.EnsureRoutesLoaded();
+    }
 
     public void Run()
     {
@@ -171,7 +177,7 @@
             }
 
 
-            var routes = _railway.GetRoutes(Start, End);
+            var routes = Railway.GetRoutes(Start, End);
 
             if (routes.Count == 0)
             {
